kube/ticket_reservation_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket_reservation_api
  labels:
    app: ticket_reservation_api
spec:
  type: NodePort
  selector:
    app: ticket_reservation_api
  ports:
    - name: http
      port: 80
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket_reservation_api
  labels:
    name: ticket_reservation_api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ticket_reservation_api
  template:
    metadata:
      labels:
        app: ticket_reservation_api
    spec:
      containers:
        - name: api
          image: dvmflstm/ticket_reservation_api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
