kube/ticket_reservation_ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ticket-reservation-api
              servicePort: 80
